minor typo editing

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <!-- Section 3 -->
         <section class="section-3 center" id="section-3">
             <!-- Section 3 Heading -->
-            <h1 class="section-3-heading">MacBook Pro</h1>
+            <h1 class="section-3-heading">MacBook Air</h1>
             <!-- End of Section 3 Heading -->
 
             <!-- Section 3 Content -->
